[package]
name = "covenants-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.0"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec" }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
hex = "0.4.3"
covenants-gadgets = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/covenants-gadgets" }
once_cell = "1.19.0"

[dev-dependencies]
bitcoin-simulator = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/bitcoin-simulator"}

[[bin]]
name = "print_address"
path = "src/bin/print_address.rs"

[profile.dev]
opt-level = 3

[profile.release]
lto = true